Solve search input overflow bug
There is bug in DataTable which makes the search input overflow in sm
screens:
https://github.com/mkhairi/jquery-datatables/issues/14

Overwrite the CSS and remove the Search label until it is fixed.

--- a/src/api/app/assets/stylesheets/webui2/webui2.css.scss
+++ b/src/api/app/assets/stylesheets/webui2/webui2.css.scss
@@ -50,3 +50,9 @@ html {
   table-layout: fixed
 }
 
+// TODO: Delete when bug is fixed: https://github.com/mkhairi/jquery-datatables/issues/14
+.obs-dataTable div.dataTables_filter input {
+  width: 100% !important;
+  margin-left: 0 !important;
+}
+
